1. Метод .of [#504200]