@@ -13,7 +13,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -21,7 +21,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -34,7 +34,7 @@ public class DepartmentsTest {
                 "K1/SK2",
                 "K1/SK1/SSK2",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1/SK1",
                 "K1/SK1/SSK2",
                 "K1/SK2",
@@ -52,7 +52,7 @@ public class DepartmentsTest {
                 "K1",
                 "K2/SK1/SSK2",
                 "K1/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1/SSK2",
                 "K1",
